# covariance-example

./: README.md  covariance-tracker.cpp  covariance-tracker.h  covariance.py  main.cpp
examples/: main.cpp
python-pseudocode/: covariance.py
src/covariance-tracker/: CMakeLists.txt  package.xml
src/covariance-tracker/include/covariance-tracker/: covariance-tracker.h
