<?xml version="1.0"?>
<package>
  <name>covariance-tracker</name>
  <version>1.0.0</version>
  <description>Computes the covariance matrix in a window of incoming values</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="joshua.m.petrin@vanderbilt.edu">Josh Petrin</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
</export>
</package>
